# perpetuals

./: .env  .gitignore  41Af5KuLs3fQobV1Pn4q39LGw3aDwY9SWQ4Sj5rB4ZjE.json  Anchor.toml  Cargo.toml  FastuHRd9PRiuKGy2dHgH4zcSRjARKnPcHiQZnxpR5fD.json  README.md  package.json  programId.json
app/src/: .env  PoolConfig.json  airdrop.ts  cli.ts  client.ts  cpi.ts  decodeEvents.ts  devnet-faucets.md  events.ts  liquidation-cron.ts  liquidator-commands.md
programs/limit-order/: Cargo.toml
programs/limit-order-cpi/: Cargo.toml
programs/limit-order-cpi/src/: lib.rs
programs/limit-order/pid/: LimtKAwfXxMMD2HgYiNwAXBRTauJZUJG1utKMazsT1m.json
programs/limit-order/src/: constant.rs  error.rs  instructions.rs  lib.rs  math.rs  state.rs
programs/limit-order/src/instructions/admin/: initialize.rs  mod.rs  reallocate.rs  update_config.rs
programs/limit-order/src/instructions/keeper/: fill_order.rs  force_cancel_order.rs  mod.rs
programs/limit-order/src/state/: limit_order.rs  order.rs  types.rs
programs/limit-order/tests/native/: main.rs
programs/perpetuals/: Cargo.toml
programs/perpetuals/src/: error.rs  instructions.rs  lib.rs
programs/perpetuals/src/instructions/: add_collateral.rs  close_position.rs  get_entry_price_and_fee.rs  get_liquidation_price.rs  get_liquidity_fee.rs  liquidate.rs  open_position.rs  remove_collateral.rs  set_keeper.rs  testing_edit_custody.rs
programs/perpetuals/src/state/: custody.rs  multisig.rs  perpetuals.rs  pool.rs
programs/perpetuals/tests/anchor/: test_client.ts
programs/perpetuals/tests/native/: main.rs
(+19 files in other folders)
