[package]
name = "limit-order-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "limit_order_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
perpetuals = { path = "../perpetuals", features = ["cpi"]}
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
solana-program = "1.14.13"
solana-security-txt = "1.1.0"
pyth-sdk-solana = "0.7.0"
ahash = "=0.7.6"
num-traits = "0.2.15"
num = "0.4.0"

[dev-dependencies]
solana-program-test = "1.14.13"
solana-sdk = "1.14.13"
tokio = { version = "1.0.0", features = ["macros"]}
bonfida-test-utils = "0.2.1"
bincode = "1.3.3"
